tests/rosetta/out/Rust/checkpoint-synchronization-2.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:40:01Z
fn main() {
    fn lower(ch: &'static str) -> &'static str {
        let upper = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
        let lower = "abcdefghijklmnopqrstuvwxyz";
        let mut i = 0;
        while i < upper.len() as i32 {
            if ch == &upper[i as usize..i + 1 as usize] {
                return &lower[i as usize..i + 1 as usize];
            }
            i += 1;
        }
        return ch;
    }
    let mut partList = vec!["A", "B", "C", "D"];
    let mut nAssemblies = 3;
    for cycle in 1..(nAssemblies + 1) {
        println!("{}", format!("{}{}", "begin assembly cycle ", cycle.to_string()));
        let mut a = "";
        for p in partList {
            println!("{}", format!("{}{}", p, " worker begins part"));
            println!("{}", format!("{}{}", format!("{}{}", p, " worker completed "), lower(p)));
            a += lower(p);
        }
        println!("{}", format!("{}{}", format!("{}{}", format!("{}{}", a, " assembled.  cycle "), cycle.to_string()), " complete"));
    }
}
